# radar-clutter-simulator

./: .gitignore  CMakeLists.txt  README.md  cli_interface.cpp  options.h
dem_parser/: LICENSE  README.md  dem_parser  dem_parser.cpp  dem_parser.h  elevation_reader.cpp  elevation_reader.cpp.orig  terrain_slope  terrain_slope.cpp
echo_sim/: clutter_coefficient.cpp  clutter_coefficient.h  conversion.cpp  echo_sim.cpp  echo_sim.h  random.cpp  random.h
include/: options.h
include/dem_parser/: dem_parser.h  elevation_reader.h  threevector.h
include/echo_sim/: antenna_pattern.h  echo_sim.h
scripts/: antenna_csv_to_binary.py  contourplot.py  tocsv.py
src/: cli_interface.cpp
src/dem_parser/: dem_parser.cpp  elevation_reader.cpp  elevation_reader.h  map_exporter.cpp  shadowing.cpp  terrain_slope.cpp  threevector.cpp
src/echo_sim/: antenna_pattern.cpp  clutter_coefficient.cpp  conversion.cpp  echo_sim.cpp  random.cpp
